--- a/docker/nginx/laravel.conf
+++ b/docker/nginx/laravel.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     index index.php;
-    root /var/www/source/public;
+    root /var/www/source/laravel/public;
 
     location ~ \.php$ {
         try_files $uri =404;
